Fix horizontal scroll.
- Add media queries for flex cards.
- Remove heading.
- Make sure banner fits in one line.

--- a/theme/assets/styles/components/_agenda.scss
+++ b/theme/assets/styles/components/_agenda.scss
@@ -1,14 +1,19 @@
 .current-actions {
   margin-left: -15px;
   margin-right: -15px;
+  padding: 0 10px;
   text-indent: 2px;
   background-color: #0ab8d1;
   height: 35px;
   line-height: 35px;
   text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #fff;
 
   a {
     color: #fff;
+    white-space: nowrap;
   }
 }
 
